--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,31 +14,33 @@ jobs:
 - job: GetBearerToken
   steps:
   - powershell: |
-      $apiUrl = "https://hotfix-docker.boldbi.com/bi/api/site/site1/token"
-      $username = "Admin"
-      $password = "Admin@123"
-
-      $base64AuthInfo = [Convert]::ToBase64String([Text.Encoding]::ASCII.GetBytes(("${username}:${password}")))
-
-      $headers = @{
-        Authorization = "Basic $base64AuthInfo"
-      }
-
-      $response = Invoke-RestMethod -Uri $apiUrl -Method Post -Headers $headers
-
-      # Extract the bearer token from the response and store it in a variable
-      $token = $response.access_token
-      Write-Host "##vso[task.setvariable variable=BearerToken;issecret=true]$token"
-      echo "$token"
-    displayName: 'Get Bearer Token'
-
-  - script: |
-      apiUrl="https://hotfix-docker.boldbi.com/bi/api/site/site1/token"
-      response=$(curl -s "$apiUrl")
-
-      # Store the response in a pipeline variable
-      echo "##vso[task.setvariable variable=ApiResponse;isOutput=true]$response"
+    $apiUrl = "https://hotfix-docker.boldbi.com/bi/api/site/site1/token"  # URL to get bearer token
+    $credentials = @{
+        username = "admin"
+        password = "Admin@123"
+    }
     
-    displayName: 'Call API and Store Response'
+    $tokenResponse = Invoke-RestMethod -Uri $apiUrl -Method Post -Body $credentials
+
+    # Debugging line to inspect the authentication response
+    Write-Host "Authentication Response: $($tokenResponse | ConvertTo-Json -Depth 10)"
+
+    $bearerToken = $tokenResponse.access_token
+
+    $apiEndpoint = "https://hotfix-docker.boldbi.com/bi/api/site/site1/token"  # API endpoint
+    $headers = @{
+        "Authorization" = "Bearer $bearerToken"
+    }
+
+    # Send the POST request using the bearer token
+    $postData = @{
+        key1 = "value1"
+        key2 = "value2"
+    }
+    $response = Invoke-RestMethod -Uri $apiEndpoint -Method Post -Headers $headers -Body $postData
+
+    Write-Host "API Response: $response"
+
+  displayName: 'Get Bearer Token and Send POST Request'
 
 
