--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,7 @@ jobs:
       $storedAccessToken = $bearerToken
 
       echo "$storedAccessToken"
+      echo "##vso[task.setvariable variable=Bearertoken]$storedAccessToken"
     displayName: 'Get Bearer Token and Send POST Request'
 
 
