--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ jobs:
     displayName: 'Get Bearer Token and Send POST Request'
      
   - powershell: |
-      $apiEndpoint = "Self-Hosted Server: https://hotfix-docker.boldbi.com/bi/api/site/site1/v4.0/dashboards"  # API endpoint
+      $apiEndpoint = "https://hotfix-docker.boldbi.com/bi/api/site/site1/v4.0/dashboards"  # API endpoint
       $bearerToken = "$(Bearertoken)"  # Access the pipeline variable
       echo "$(Bearertoken)"
       $headers = @{
