--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,9 +56,14 @@ jobs:
       $response | ForEach-Object {
           $idsArray += $_.Id
       }
-      $idsArrayJson = $idsArray | ConvertTo-Json -Depth 10
-      Write-Host "##vso[task.setvariable variable=ExtractedIds;isOutput=true]$idsArrayJson"
+      Write-Host "##vso[task.setvariable variable=ExtractedIds;isOutput=true]$($idsArray -join ',')"
       echo "$ExtractedIds"
+      extractedIds=$(ExtractedIds) # Retrieve the array of IDs from the variable
+      idsArray=($extractedIds -split ',')  # Convert the comma-separated string back to an array
+
+      # Display the extracted IDs
+      Write-Host "Extracted IDs: $($idsArray -join ',')"
     displayName: 'Call API with Bearer Token'
+ 
 
 
