Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -97,6 +97,15 @@ jobs:
       $jobId = $response.Data.JobId
 
       Write-Host "Extracted JobId: $jobId"
+      echo "##vso[task.setvariable variable=JobID]$jobId"
 
     displayName: 'Send POST Request to API'
+  - powershell: |
+      $apiUrl = "https://hotfix-docker.boldbi.com/bi/api/site/site1/v4.0/dashboards/download/job/"$(JobID)""  # API endpoint
+      $bearerToken = "$(Bearertoken)"  # Access the pipeline variable
 
+      $headers = @{
+          "Authorization" = "Bearer $bearerToken"
+          "Content-Type" = "application/json"
+      }
+  displayName: 'Download dashboard'
