--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -97,9 +97,26 @@ jobs:
       $jobId = $response.Data.JobId
 
       Write-Host "Extracted JobId: $jobId"
+      Write-Host "##vso[task.setvariable variable=jobid]$jobId"
       $downloadUrl = "https://hotfix-docker.boldbi.com/bi/api/site/site1/v4.0/dashboards/download/job/$jobId"
       Write-Host "Download URL: $downloadUrl"
 
     displayName: 'Send POST Request to API'
+  - powershell: |
+      $apiUrl = "https://hotfix-docker.boldbi.com/bi/api/site/site1/v4.0/dashboards/download/job/$jobid"  # Replace with your API endpoint
+      $bearerToken = "$(Bearertoken)"  # Access the pipeline variable
+
+      $headers = @{
+          "Authorization" = "Bearer $bearerToken"
+          "Content-Type" = "application/json"
+      }
+
+      # Send the GET request using the bearer token
+      $response = Invoke-RestMethod -Uri $apiUrl -Method Get -Headers $headers
+
+      # Display the response
+      Write-Host "API Response: $($response | ConvertTo-Json -Depth 10)"
+
+    displayName: 'Run API and Get Response'
 
 
