Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -135,10 +135,10 @@ jobs:
           "Authorization" = "Bearer $bearerToken"
           "Content-Type" = "application/json"
       }
-
+      $secureContent = "$(itemcontent)"
       # Construct the request body
       $requestBody = @{
-          "FileContent" = "$(itemcontent)",
+          "FileContent" = $secureContent
           "FileExtension" = "$(itemExtension)"
       }
 
