--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,6 +61,7 @@ jobs:
 
       # Display the extracted IDs
       Write-Host "Extracted IDs: $($idsArray -join ',')"
+      echo "##vso[task.setvariable variable=Idarray]$($idsArray -join ',')"
 
     displayName: 'Call API with Bearer Token'
  
@@ -72,7 +73,7 @@ jobs:
           "Authorization" = "Bearer $bearerToken"
           "Content-Type" = "application/json"
       }
-
+        echo $(Idarray)
       # Split the Dashboard IDs entered as a parameter
         $dashboardIdsArray = @()
         if (${{ parameters.DashboardIDs }} -ne "All") {
