--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,14 +78,13 @@ jobs:
       Write-Host "Input DashboardIDs: ${{ parameters.DashboardIDs }}"
       Write-Host "Value of Idarray: $(Idarray)"
 
-      if (${{ parameters.DashboardIDs }} -eq "All") {
+      if (${{ parameters.DashboardIDs }} -eq All) {
           $dashboardIdsArray = $(Idarray) -split ','
           $dashboardIdsArray = $dashboardIdsArray | ForEach-Object { '"' + $_ + '"' }
       } else {
           $dashboardIdsArray = ${{ parameters.DashboardIDs }} -split ','
           $dashboardIdsArray = $dashboardIdsArray | ForEach-Object { '"' + $_ + '"' }
       }
-      #Write-Host "Final dashboardIdsArray: $dashboardIdsArray"
 
       echo $dashboardIdsArray
 
