--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,10 +80,10 @@ jobs:
 
       if (${{ parameters.DashboardIDs }} -eq All) {
           $dashboardIdsArray = $(Idarray) -split ','
-          $dashboardIdsArray = $dashboardIdsArray | ForEach-Object { '"' + $_ + '"' }
+          $dashboardIdsArray = $dashboardIdsArray -replace '^"|"$', '"$0"'
       } else {
           $dashboardIdsArray = ${{ parameters.DashboardIDs }} -split ','
-          $dashboardIdsArray = $dashboardIdsArray | ForEach-Object { '"' + $_ + '"' }
+          $dashboardIdsArray = $dashboardIdsArray -replace '^"|"$', '"$0"'
       }
 
       echo $dashboardIdsArray
