--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,6 +62,8 @@ jobs:
       # Display the extracted IDs
       Write-Host "Extracted IDs: $($idsArray -join ',')"
       echo "##vso[task.setvariable variable=Idarray]$($idsArray -join ',')"
+      $Idarray = $($Idarray -join ',')
+      echo $Idarray
     displayName: 'Call API with Bearer Token'
  
   - powershell: |
@@ -72,11 +74,11 @@ jobs:
           "Authorization" = "Bearer $bearerToken"
           "Content-Type" = "application/json"
       }
-      $Idarray = $Idarray -join ','
+      $Idarray = $($Idarray -join ',')
       echo $Idarray
       $dashboardIdsArray = @()
       Write-Host "Input DashboardIDs: ${{ parameters.DashboardIDs }}"
-      Write-Host "Value of Idarray: $(Idarray)"
+      Write-Host "Value of Idarray: $Idarray"
 
       if (${{ parameters.DashboardIDs }} -eq All) {
           $dashboardIdsArray = $(Idarray) -split ','
