--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,8 +61,7 @@ jobs:
 
       # Display the extracted IDs
       Write-Host "Extracted IDs: $($idsArray -join ',')"
-      echo "##vso[task.setvariable variable=Idarray]$($idsArray -join ',')"
-      $Idarray = $Idarray -join ','
+      $Idarray = $($idsArray -join ',')
       echo $Idarray
     displayName: 'Call API with Bearer Token'
  
