--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,6 +63,7 @@ jobs:
       Write-Host "Extracted IDs: $($idsArray -join ',')"
       $Idarray = $($idsArray -join ',')
       echo $Idarray
+      echo "##vso[task.setvariable variable=Idarray]$Idarray"
     displayName: 'Call API with Bearer Token'
  
   - powershell: |
