--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,16 +75,7 @@ jobs:
           "Authorization" = "Bearer $bearerToken"
           "Content-Type" = "application/json"
       }
-      $dashboardIdsArray = @()
-
-      if (${{ parameters.DashboardIDs }} -eq All) {
-          $dashboardIdsArray = $(Idarray) -split ','
-          $dashboardIdsArray = $dashboardIdsArray -replace '^"|"$', '"$0"'
-      } else {
-          $dashboardIdsArray = ${{ parameters.DashboardIDs }} -split ','
-          $dashboardIdsArray = $dashboardIdsArray -replace '^"|"$', '"$0"'
-      }
-
+      $dashboardIdsArray=$(Idarray)
       echo $dashboardIdsArray
 
       # Construct the request body with the Dashboard IDs
