--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,11 +63,11 @@ jobs:
       Write-Host "Extracted IDs: $($idsArray -join ',')"
       $Idarray = $($idsArray -join ',')
       echo $Idarray
-      echo "##vso[task.setvariable variable=Idarray]$Idarray"
+      echo "##vso[task.setvariable variable=Idarray1]$Idarray"
     displayName: 'Call API with Bearer Token'
  
   - powershell: |
-      echo $(Idarray)
+      echo $(Idarray1)
       $apiUrl = "https://hotfix-docker.boldbi.com/bi/api/site/site1/v4.0/dashboards/download/job"  # API endpoint
       $bearerToken = "$(Bearertoken)"  # Access the pipeline variable
 
@@ -75,7 +75,7 @@ jobs:
           "Authorization" = "Bearer $bearerToken"
           "Content-Type" = "application/json"
       }
-      $dashboardIdsArray=$(Idarray)
+      $dashboardIdsArray=$(Idarray1)
       echo $dashboardIdsArray
 
       # Construct the request body with the Dashboard IDs
