--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,7 +67,8 @@ jobs:
     displayName: 'Call API with Bearer Token'
  
   - powershell: |
-      echo $(Idarray1)
+      $Idarray = $($idsArray -join ',')
+      echo $Idarray
       $apiUrl = "https://hotfix-docker.boldbi.com/bi/api/site/site1/v4.0/dashboards/download/job"  # API endpoint
       $bearerToken = "$(Bearertoken)"  # Access the pipeline variable
 
@@ -75,7 +76,7 @@ jobs:
           "Authorization" = "Bearer $bearerToken"
           "Content-Type" = "application/json"
       }
-      $dashboardIdsArray=$(Idarray1)
+      $dashboardIdsArray=$(Idarray)
       echo $dashboardIdsArray
 
       # Construct the request body with the Dashboard IDs
