Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,7 +77,7 @@ jobs:
       }
       $dashboardIdsArray = @()
       if (${{ parameters.DashboardIDs }} -eq "All") {
-          $dashboardIdsArray = $Idarray1 -split ','
+          $dashboardIdsArray = $(Idarray1) -split ','
           $dashboardIdsArray = $dashboardIdsArray -replace '^"|"$', '"$0"'
       } else {
           $dashboardIdsArray = ${{ parameters.DashboardIDs }} -split ','
