--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,11 +64,7 @@ jobs:
       $Idarray = $($idsArray -join ',')
       echo $Idarray
       echo "##vso[task.setvariable variable=Idarray1]$Idarray"
-    displayName: 'Call API with Bearer Token'
- 
-  - powershell: |
-      echo $(Idarray1)
-      $apiUrl = "https://hotfix-docker.boldbi.com/bi/api/site/site1/v4.0/dashboards/download/job"  # API endpoint
+      $apiUrl1 = "https://hotfix-docker.boldbi.com/bi/api/site/site1/v4.0/dashboards/download/job"  # API endpoint
       $bearerToken = "$(Bearertoken)"  # Access the pipeline variable
 
       $headers = @{
@@ -77,7 +73,7 @@ jobs:
       }
       $dashboardIdsArray = @()
       if (${{ parameters.DashboardIDs }} -eq "All") {
-          $dashboardIdsArray = $(Idarray1) -split ','
+          $dashboardIdsArray = $Idarray -split ','
           $dashboardIdsArray = $dashboardIdsArray -replace '^"|"$', '"$0"'
       } else {
           $dashboardIdsArray = ${{ parameters.DashboardIDs }} -split ','
@@ -95,7 +91,7 @@ jobs:
       $requestBodyJson = $requestBody | ConvertTo-Json -Depth 10
 
       # Send the POST request using the bearer token and request body
-      $response = Invoke-RestMethod -Uri $apiUrl -Method Post -Headers $headers -Body $requestBodyJson
+      $response = Invoke-RestMethod -Uri $apiUrl1 -Method Post -Headers $headers -Body $requestBodyJson
 
       # Display the response
       Write-Host "API Response: $($response | ConvertTo-Json -Depth 10)"
