--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -152,12 +152,12 @@ jobs:
 
       # Send the POST request using the bearer token and request body
       $response = Invoke-RestMethod -Uri $apiUrl -Method Post -Headers $headers -Body $requestBodyJson
-      # Store the API response in a variable
-      $apiResponse = $response
+      # Extract the "Data" values and store them in a new variable
+      $dataValues = $response.Data
       # Display the response
       Write-Host "API Response: $($response | ConvertTo-Json -Depth 10)"
-      # Display the stored Data values
-      Write-Host "API Response: $($apiResponse | ConvertTo-Json -Depth 10)"
+      echo "rk"
+      echo $dataValues
 
     displayName: 'Get Dashboard Details'
   - powershell: |
@@ -191,7 +191,6 @@ jobs:
 
       # Send the GET request using the bearer token
       $response = Invoke-RestMethod -Uri $apiUrl -Method Get -Headers $headers
-
       # Display the response
       Write-Host "API Response: $($response | ConvertTo-Json -Depth 10)"
     displayName: 'Get Categories in target machine'
